[gd_scene load_steps=5 format=3 uid="uid://chg7urcjqjycv"]

[ext_resource type="Script" path="res://scripts/enemies/sprinkle_enemy.gd" id="1_hgmi2"]
[ext_resource type="Texture2D" uid="uid://b3a52q31y6dx2" path="res://assets/enemies/diamond_enemy.png" id="1_vsaqa"]
[ext_resource type="PackedScene" uid="uid://bwltsypi3u0ij" path="res://scenes/bullet.tscn" id="2_a6ai2"]
[ext_resource type="PackedScene" uid="uid://bimgvvflu1hoh" path="res://scenes/debree/debree_diamond.tscn" id="3_ahnwt"]

[node name="SprinkleEnemy" type="RigidBody2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 5
gravity_scale = 0.0
script = ExtResource("1_hgmi2")
bullet_scene = ExtResource("2_a6ai2")
debree_scene = ExtResource("3_ahnwt")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("1_vsaqa")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-1, -33, -8, -9, -30, -1, -8, 8, -1, 32, 8, 7, 29, 0, 7, -9)

[node name="ShootingTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Area2D" type="Area2D" parent="." groups=["enemy"]]
collision_layer = 2
collision_mask = 5

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(-1, -33, -8, -9, -30, -1, -8, 8, -1, 32, 8, 7, 29, 0, 7, -9)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ShootingTimer" to="." method="_on_shooting_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
